--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "datatables.net": "^2.3.6",
+    "datatables.net-bs5": "^2.3.6",
+    "jquery": "^3.7.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icon": "^1.0.0",
